feat: 지역화폐 가맹점 리스트 조회 구현